cf_analysis_results/checkerframework_3.42.0_results/url4fdf79ae2c_beckchr_juel_tgz-pJ8-de_odysseus_el_samples_xml_sax_XMELFilterJ8.txt
../dataset/june2020_dataset/url4fdf79ae2c_beckchr_juel_tgz-pJ8-de_odysseus_el_samples_xml_sax_XMELFilterJ8/src/javax/el/ExpressionFactoryTest.java:30: error: (required.method.not.called) $$ 4 $$ method close $$ input $$ java.io.InputStream $$ regular method exit $$ ( 1066, 1145 ) $$ @MustCall method close may not have been invoked on input or any of its aliases.
		InputStream input = getClass().getClassLoader().getResourceAsStream(serviceId);
		            ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
1 error
